# Chess-engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
src/: main.cpp
src/controller/: GameControler.cpp  GameControler.hpp
src/model/: Attacks.cpp  Attacks.hpp  Board.cpp  Board.hpp  FenParser.cpp  FenParser.hpp  Magics.hpp  MoveGenerator.cpp  MoveGenerator.hpp  Types.hpp  Zobrist.cpp  Zobrist.hpp
src/view/: BoardRender.cpp  BoardRender.hpp
tools/: generate_masks.cpp  magic_generator.cpp
